--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,2 +1,9 @@
 @use 'base' as b;
 @use 'contenido' as c;
+
+body{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family:Arial
+}
