--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,3 +6,9 @@ $colorBlanco : #fff;
 
 $colorNegro : #000;
 
+$facebook : #5ef3d3;
+$twitter : #63d4f0;
+$instagran : #f17cd4;
+$pinterest : #ebca5e;
+$linkedin : #e9e3d7;
+$youtube : #46a7c5;
