--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -12,3 +12,9 @@ $instagran : #f17cd4;
 $pinterest : #ebca5e;
 $linkedin : #e9e3d7;
 $youtube : #46a7c5;
+
+
+$darkslatgray : #2f4f4f;
+$dodgerblue : #1e90ff;
+$darkorchid : #9932cc;
+$springgreen : #00ff7f;
