--- a/src/scss/contenido/_footer.scss
+++ b/src/scss/contenido/_footer.scss
@@ -3,19 +3,14 @@
 
 footer {
     color: v.$colorBlanco;
-
-    nav {
-        @include m.flex-nav;
-        background-color: v.$colorNegro;
-
-        a {
-            color: v.$colorBlanco;
-            text-decoration: none;
-            padding: 10px;
-        }
-
-        @include m.media-responsive;
+    background-color: v.$colorNegro;
+    @include m.flex-nav;
+    @include m.media-responsive;
+    a {
+        color: v.$colorBlanco;
+        text-decoration: none;
     }
-
-
+    p {
+        margin: 5px 0;
+    }
 }
