--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,9 +1,16 @@
 @use 'base' as b;
 @use 'contenido' as c;
 
-body{
+*{
     padding: 0;
     margin: 0;
+
     box-sizing: border-box;
-    font-family:Arial
+    font-family: Arial,
+}
+.container{
+    max-width: 1200px;
+    height: 100%;
+    margin-top: 5px;
+    
 }
