--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,12 +3,14 @@ $colorLogo : #ee5e8e;
 $colorBlanco : #fff;
 $colorNegro : #000;
 
+
 $facebook : #5ef3d3;
 $twitter : #63d4f0;
-$instagran : #f17cd4;
+$instagram : #f17cd4;
 $pinterest : #ebca5e;
 $linkedin : #e9e3d7;
 $youtube : #46a7c5;
+
 
 
 $darkslatgray : #2f4f4f;
