--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -4,12 +4,12 @@ $colorBlanco : #fff;
 $colorNegro : #000;
 
 
-$facebook : #5ef3d3;
-$twitter : #63d4f0;
-$instagram : #f17cd4;
-$pinterest : #ebca5e;
-$linkedin : #e9e3d7;
-$youtube : #46a7c5;
+$facebook : #0866FF;
+$twitter : #dded00;
+$instagram : #e24a98;
+$pinterest : #9254e4;
+$linkedin : #5191d1;
+$youtube : #dd3e3e;
 
 
 
